--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^7.0.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.0.0",
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "prisma": "^7.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
